# Lime

./: .envrc  .gitignore  .stylish-haskell.yaml  LICENSE.md  Lime.cabal  README.md  TODO.md  TODO.org  cabal.project  default.nix  flake.nix  fourmolu.yaml  pre-commit.ps1  scene.yaml  shell.nix
.github/workflows/: haskell.yml  nix.yml
App/: Animate.hs  Main.hs
Assets/: Icon.rc
Benchmark/: Main.hs
Examples/: Cornell.yaml  Cube.yaml  Empty.yaml  Moon.yaml  Saturn.yaml  Scene.yaml
Examples/Scenes/: Balls.yaml  Circling camera.anim.lua  Empty.yaml  Jupiter.yaml  Pawn.lua  Saturn.yaml  Spheres.lua
Gui/: Main.hs
Lime/: Main.hs
Scripts/: Clean.ps1  Stitch.ps1  Watch.ps1  bloom.sh  fmt.sh  pre-commit.ps1  pre-commit.sh
Source/: Bounds.hs  Camera.hs  Color.hs  Engine.hs  Main.hs  Materials.hs  Parser.hs  Primitives.hs  Ray.hs  Textures.hs  Things.hs  Utils.hs  Vector.hs
Source/Data/: Color.hs  Ray.hs  Scene.hs  Vec.hs  Wavefront.hs
Source/Lime/: Camera.hs  Context.hs  Device.hs  Engine.hs  Materials.hs  Parser.hs  Post.hs  Primitives.hs  Shapes.hs  Textures.hs
Source/Lime/Internal/: Hit.hs  Utils.hs
Source/Linear/: Metric.hs  Optics.hs  Transform.hs
Source/Objects/: Sphere.hs
Source/Things/: Cube.hs  Ring.hs  Sphere.hs  Thing.hs  Types.hs
Test/: Main.hs  Mainn.hs  Optics.hs  Primitives.hs  Transform.hs
cbits/: .clangd  data.cuh  driver.c  kernel.cu  makefile  math.cuh
nix/: gltf-codec.nix  wavefront.txt
scripts/: Stitch.ps1  clean.ps1
src/: Camera.hs  Color.hs  Hittable.hs  Main.hs  Ray.hs  Vector.hs
src/Objects/: Hittable.hs  Sphere.hs
