cabal-version:   3.4
name:            Lime
version:         0.1.0.0
synopsis:        Ray Tracer
description:
  A simple raytracer written in haskell
  .
  See the README on GitHub at <https://github.com/Froxwin/Lime#readme>

homepage:        https://github.com/Froxwin/Lime/
bug-reports:     https://github.com/Froxwin/Lime/issues
license:         BSD-3-Clause
license-file:    LICENSE.md
copyright:       2024 Froxwin
author:          Froxwin
maintainer:      56168224+Froxwin@users.noreply.github.com
category:        Graphics
build-type:      Simple
extra-doc-files: README.md

source-repository head
  type:     git
  location: https://github.com/Froxwin/Lime

common library-depends
  build-depends:
    , aeson
    , base
    , containers
    , deepseq
    , JuicyPixels
    , vector
    , wavefront

common library
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wcompat -Wno-type-defaults -Wno-safe -Wno-unsafe
    -Wno-implicit-prelude -Wno-missing-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-import-lists -Wno-prepositive-qualified-module
    -Wno-missing-safe-haskell-mode

common executable
  import:        library
  build-depends:
    , base
    , Lime

  ghc-options:   -rtsopts -threaded -with-rtsopts=-N

library
  import:             library, library-depends
  hs-source-dirs:     Source
  default-extensions:
    DeriveGeneric
    InstanceSigs

  exposed-modules:
    Camera
    Color
    Engine
    Materials
    Primitives
    Ray
    Textures
    Utils
    Vector

executable Lime
  import:         executable
  hs-source-dirs: Lime
  main-is:        Main.hs
  build-depends:
    , containers
    , hslua
    , optparse-applicative
    , yaml

test-suite Alkali
  import:         executable, library-depends
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: Test
  build-depends:
    , tasty
    , tasty-hunit
    , yaml
    , bytestring

benchmark Halogen
  import:         executable
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: Benchmark
  build-depends:
    , criterion
    , random
