cabal-version:   3.4
name:            Lime
version:         0.1.0.0
synopsis:        Ray Tracer
description:
  A simple raytracer written in haskell
  .
  See the README on GitHub at <https://github.com/Froxwin/Lime#readme>

homepage:        https://github.com/Froxwin/Lime/
bug-reports:     https://github.com/Froxwin/Lime/issues
license:         BSD-3-Clause
license-file:    LICENSE.md
copyright:       2024 Froxwin
author:          Froxwin
maintainer:      56168224+Froxwin@users.noreply.github.com
category:        Graphics
build-type:      Simple
extra-doc-files: README.md

source-repository head
  type:     git
  location: https://github.com/Froxwin/Lime.git

common library-depends
  build-depends:
    , aeson
    , base
    , containers
    , deepseq
    -- , gltf-codec
    , hslua
    , JuicyPixels
    , JuicyPixels-extra
    , lens
    , linear
    , mtl
    , random
    , template-haskell
    , vector
    , filepath
    -- , wavefront
    , massiv
    , massiv-io
    , parallel
    -- , accelerate
    , megaparsec
    , bytestring

flag warn-all
  description: Enables warnings that are turned off.
  default:     False
  manual:      True

common library
  default-language: GHC2021
  ghc-options: -g3 -Weverything -Wcompat -O2

  if !flag(warn-all)
    ghc-options:
      -Wno-type-defaults -Wno-safe -Wno-unsafe -Wno-implicit-prelude
      -Wno-missing-kind-signatures -Wno-missing-local-signatures
      -Wno-all-missed-specialisations -Wno-missing-deriving-strategies
      -Wno-missing-export-lists -Wno-missing-import-lists
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode

common executable
  import:        library
  build-depends:
    , base
    , Lime

  ghc-options: -g3 -O2 -threaded -rtsopts -with-rtsopts=-N
-- ./Assets/Icon.o

library
  import:             library, library-depends
  hs-source-dirs:     Source
  default-extensions:
    DeriveGeneric
    InstanceSigs

  exposed-modules:
    Data.Color
    Data.Ray
    Data.Wavefront
    Lime.Camera
    Lime.Engine
    Lime.Internal.Hit
    Lime.Internal.Utils
    Lime.Materials
    Lime.Parser
    Lime.Post
    Lime.Primitives
    Lime.Shapes
    Lime.Textures
    Linear.Optics
    Linear.Transform
    Linear.Metric

executable Lime
  import:         executable
  hs-source-dirs: Lime
  main-is:        Main.hs
  build-depends:
    , containers
    , hslua
    , optparse-applicative
    , yaml

test-suite Alkali
  import:         executable, library-depends
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Optics
    Primitives
    Transform

  hs-source-dirs: Test
  build-depends:
    , bytestring
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , yaml

benchmark Halogen
  import:         executable, library-depends
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: Benchmark
  build-depends:
    , criterion
    , random
