cabal-version:   3.4
name:            Lime
version:         0.1.0.0
synopsis:        Ray Tracer
description:
  A simple raytracer written in haskell
  .
  See the README on GitHub at <https://github.com/Froxwin/Lime#readme>

homepage:        https://github.com/Froxwin/Lime/
bug-reports:     https://github.com/Froxwin/Lime/issues
license:         BSD-3-Clause
license-file:    LICENSE.md
copyright:       2025 Froxwin
author:          Froxwin
maintainer:      56168224+Froxwin@users.noreply.github.com
category:        Graphics
build-type:      Simple
extra-doc-files: README.md
-- data-files:      build/kernel.ptx

source-repository head
  type:     git
  location: https://github.com/Froxwin/Lime.git

common library-depends
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , deepseq
    , filepath
    , hslua
    , JuicyPixels
    , JuicyPixels-extra
    , lens
    , linear
    , massiv
    , massiv-io
    , megaparsec
    , mtl
    , parallel
    , random
    , template-haskell
    , vector
    , ghc-prim
    , criterion
    , primitive
    , gltf-codec

flag warn-all
  description: Enables warnings that are turned off.
  default:     False
  manual:      True

flag cuda
  description: Compile with cuda support
  default:     False
  manual:      True

flag simd
  description: Compile with SIMD support
  default: False
  manual: True

common library
  default-language: GHC2024
  ghc-options:      -Wall

  -- -Weverything -Wcompat
  if flag(simd)
    CPP-Options: -DSIMD

  if !flag(warn-all)
    ghc-options:
      -Wno-type-defaults -Wno-safe -Wno-unsafe -Wno-implicit-prelude
      -Wno-missing-kind-signatures -Wno-missing-local-signatures
      -Wno-all-missed-specialisations -Wno-missing-deriving-strategies
      -Wno-missing-export-lists -Wno-missing-import-lists
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode

common executable
  import:        library
  build-depends:
    , base
    , Lime

  ghc-options:   -threaded -rtsopts -with-rtsopts=-N

-- ./Assets/Icon.o

library
  import:             library, library-depends
  hs-source-dirs:     Source
  -- c-sources:          cbits/driver.c

  -- if flag(cuda)
  --   extra-libraries: cuda

  -- else
  --   cpp-options: -DNO_CUDA

  other-modules:      Paths_Lime
  exposed-modules:
    Data.Color
    Data.Ray
    Data.Wavefront
    Data.Vec
    Data.Scene
    Lime.Context
    Lime.Camera
    --Lime.Device
    Lime.Engine
    Lime.Internal.Hit
    Lime.Internal.Utils
    Lime.Materials
    Lime.Post
    Lime.Primitives
    Lime.Textures
    Linear.Metric
    Linear.Optics
    Linear.Transform

executable Lime
  import:         executable
  hs-source-dirs: Lime
  main-is:        Main.hs
  build-depends:
    , containers
    , hslua
    , optparse-applicative
    , yaml

executable Lime-gui
  import:         executable
  hs-source-dirs: Gui
  main-is:        Main.hs
  build-depends:
    , containers
    , hslua
    , optparse-applicative
    , yaml
    , sdl2
    , JuicyPixels
    , vector
    , deepseq
    , random
    , containers
    , filepath
    , bytestring

-- test-suite Alkali
--   import:         executable, library-depends
--   type:           exitcode-stdio-1.0
--   main-is:        Main.hs
--   -- other-modules:
--   --   Optics
--   --   Primitives
--   --   Transform

--   hs-source-dirs: Test
--   build-depends:
--     , bytestring
--     , tasty
--     , tasty-hunit
--     , tasty-quickcheck
--     , yaml

-- benchmark Halogen
--   import: executable, library-depends
--   type:           exitcode-stdio-1.0
--   main-is:        Main.hs
--   hs-source-dirs: Benchmark
--   build-depends: criterion, random
